syntax = "proto3";

package stream;

option go_package = "./";

message CreateUserReq {
  string username = 1;
  string email=2;
  int64 age=3;
}
message CreateUserResp {
  int64 code = 1;
  string msg=2;
}

message DelUserReq {
  int64 id=1;
}
message DelUserResp {
  int64 code = 1;
  string msg=2;
}

message UpdateUserReq {
  int64 id=1;
  string username = 2;
  string email=3;
  int64 age=4;
}
message UpdateUserResp {
  int64 code = 1;
  string msg=2;
}

message User {
  int64 id=1;
  string username = 2;
  string email=3;
  int64 age=4;
}
message UserListReq {
  int64 page=1;
  int64 size=2;
}
message UserListResp {
  repeated User userList =1;
  string msg=2;
}
service StreamGreeter {
  rpc CreateUser(CreateUserReq) returns (CreateUserResp);
  rpc DelUser(DelUserReq) returns (DelUserResp);
  rpc UpdateUser(UpdateUserReq) returns (UpdateUserResp);
  rpc UserList(UserListReq) returns (UserListResp);
}